modification premier aout

--- a/public/client/css/main.css
+++ b/public/client/css/main.css
@@ -148,7 +148,8 @@ h6 {
   --heading-color: #ffffff;
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 20px 0;
+  padding: 10px 0;
+  height: 70px;
   transition: all 0.5s;
   z-index: 997;
 }
@@ -173,16 +174,16 @@ h6 {
 }
 
 .scrolled .header {
-  box-shadow: 0px 0 18px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Global Header on Scroll
 ------------------------------*/
 .scrolled .header {
-  --background-color: rgba(255, 255, 255, 0.95);
-  --heading-color: #3c3c3c;
-  --nav-color: #3c3c3c;
-  --nav-hover-color: #3c3c3c;
+  --background-color: rgba(40, 40, 40, 1);
+  --heading-color: #ffffff;
+  --nav-color: #ffffff;
+  --nav-hover-color: #ffffff;
 }
 
 /*--------------------------------------------------------------
